<resources>
    <string name="app_name">Daily News</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="_01_january_1990">01 January 1990</string>
    <string name="description">Description</string>
    <string name="source">Source</string>
    <string name="time">Time</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="subtitle">Subtitle</string>
    <string name="news_for_you">News for you</string>
    <string name="title_of_news">Title of News</string>
    <string name="a_time_ago">a time ago</string>
    <string name="todo">TODO</string>
</resources>