<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="@dimen/cardview_default_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:transitionName="img" />

            <ImageView
                android:id="@+id/shadow_bottom"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignBottom="@id/img"
                android:src="@drawable/bottom_shadow" />

            <ProgressBar
                android:id="@+id/progress_load_photo"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp" />

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignStart="@id/title"
                android:layout_alignTop="@id/layoutDate"
                android:layout_alignEnd="@id/layoutDate"
                android:layout_marginEnd="160dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:gravity="bottom"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/author"
                android:textColor="#fff" />

            <FrameLayout
                android:id="@+id/layoutDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_white"
                android:padding="5dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_date" />

                <TextView
                    android:id="@+id/publishedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/_01_january_1990"
                    android:textColor="#606060" />

            </FrameLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="17sp"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/colorTextTitle"
                android:layout_below="@id/img"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorTextTitle"
                android:layout_marginTop="5dp"
                android:text="@string/description"
                android:fontFamily="@font/ubuntu"/>

            <TextView
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/desc"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/ubuntu_bold"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:gravity="bottom"
                android:maxLines="1"
                android:text="@string/source"
                android:textColor="@color/colorTextTitle" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/desc"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@id/source"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/time"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>